Fixes
fixes the background image splash screen, edited the scrollbar to be hidden but still functional.

--- a/config.css
+++ b/config.css
@@ -15,18 +15,23 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: #645986;
+    background-color: #FAFAFF;
     font-family: 'Nunito Sans', sans-serif;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
-header {
-    font-family: 'Monsterrat', sans-serif;
+body::-webkit-scrollbar {
+    display: none;
 }
 
 nav {
+    display: block;
+    font-family: 'Monsterrat', sans-serif;
     overflow: hidden;
     width: 100%;
     background-color: rgba(29, 0, 109, 1);
+    font-family: 'Monsterrat', sans-serif;
 }
 
 nav a {
@@ -43,15 +48,13 @@ nav a:hover {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-* {
-    box-sizing: border-box;
-}
-
 .widescreen {
+    visibility: hidden;
     display: none;
 }
 
 .mobile {
+    visibility: visible;
     display: block;
 }
 
@@ -73,23 +76,32 @@ nav a:hover {
     padding-top: 60px;
 }
 
-#splashScreen {
+#splash-screen {
     background-image: url("jWr67J8.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     filter: blur(5px);
     -webkit-filter: blur(5px);
-    position: relative;
-    padding: 5%;
-    margin: 0;
     height: 100%;
-    width: 100%;
+}
+
+.scroll-here {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 @media only screen and (min-width: 768px) {
     nav {
-        overflow: auto;
         box-shadow: 0px 2px 5px black;
     }
 
@@ -104,10 +116,12 @@ nav a:hover {
 
 @media only screen and (min-width: 992px) {
     .widescreen {
+        visibility: visible;
         display: block;
     }
 
     .mobile {
+        visibility: hidden;
         display: none;
     }
 
